--- a/image-resizer.html
+++ b/image-resizer.html
@@ -264,6 +264,113 @@ data-bs-dismiss="offcanvas"></button>
     without worrying about losing quality.
   </p>
 
+  <!-- FAQ SECTION -->
+<section style="max-width:860px; margin:40px auto; padding:0 16px;">
+
+  <h2 style="font-size:1.5rem; font-weight:700; margin-bottom:20px;">
+    Frequently Asked Questions – Image Resizer
+  </h2>
+
+  <!-- Q1 -->
+  <div style="background:#fff; border-radius:10px; padding:18px 20px; margin-bottom:12px; box-shadow:0 1px 4px rgba(0,0,0,0.08);">
+    <h3 style="font-size:1rem; font-weight:600; margin-bottom:8px;">
+      What image formats does the TechTools Image Resizer support?
+    </h3>
+    <p style="font-size:0.9rem; color:#444; line-height:1.7; margin:0;">
+      The TechTools Image Resizer supports three widely used image formats: 
+      <strong>JPG</strong>, <strong>PNG</strong>, and <strong>WEBP</strong>. 
+      You can upload an image in any of these formats and also choose to download 
+      the resized image in a different format. For example, you can upload a PNG 
+      and download it as a JPG to reduce file size.
+    </p>
+  </div>
+
+  <!-- Q2 -->
+  <div style="background:#fff; border-radius:10px; padding:18px 20px; margin-bottom:12px; box-shadow:0 1px 4px rgba(0,0,0,0.08);">
+    <h3 style="font-size:1rem; font-weight:600; margin-bottom:8px;">
+      Is my image uploaded to a server when I use this tool?
+    </h3>
+    <p style="font-size:0.9rem; color:#444; line-height:1.7; margin:0;">
+      No. The TechTools Image Resizer works entirely in your browser. 
+      Your image is never uploaded to any server and is never stored or shared. 
+      All processing happens locally on your device, which means your photos and 
+      files stay completely private and secure.
+    </p>
+  </div>
+
+  <!-- Q3 -->
+  <div style="background:#fff; border-radius:10px; padding:18px 20px; margin-bottom:12px; box-shadow:0 1px 4px rgba(0,0,0,0.08);">
+    <h3 style="font-size:1rem; font-weight:600; margin-bottom:8px;">
+      What is the best image size for Instagram, YouTube, and Facebook?
+    </h3>
+    <p style="font-size:0.9rem; color:#444; line-height:1.7; margin:0;">
+      Each platform has recommended image dimensions for best results:
+    </p>
+    <ul style="font-size:0.9rem; color:#444; line-height:1.9; margin:8px 0 0 18px;">
+      <li><strong>Instagram Post:</strong> 1080 × 1080 px (square) or 1080 × 1350 px (portrait)</li>
+      <li><strong>Instagram Story / Reels:</strong> 1080 × 1920 px</li>
+      <li><strong>YouTube Thumbnail:</strong> 1280 × 720 px</li>
+      <li><strong>Facebook Cover Photo:</strong> 820 × 312 px</li>
+      <li><strong>Twitter / X Header:</strong> 1500 × 500 px</li>
+      <li><strong>General Web Use:</strong> 1200 × 630 px</li>
+    </ul>
+  </div>
+
+  <!-- Q4 -->
+  <div style="background:#fff; border-radius:10px; padding:18px 20px; margin-bottom:12px; box-shadow:0 1px 4px rgba(0,0,0,0.08);">
+    <h3 style="font-size:1rem; font-weight:600; margin-bottom:8px;">
+      Will resizing reduce my image quality?
+    </h3>
+    <p style="font-size:0.9rem; color:#444; line-height:1.7; margin:0;">
+      Resizing to a smaller size generally preserves quality well, especially when 
+      you keep the quality slider at 85–100%. Making an image larger than its 
+      original size (upscaling) can cause it to look blurry or pixelated, 
+      because the tool has to create new pixels that didn't exist in the original. 
+      For best results, always resize <em>down</em> rather than up.
+    </p>
+  </div>
+
+  <!-- Q5 -->
+  <div style="background:#fff; border-radius:10px; padding:18px 20px; margin-bottom:12px; box-shadow:0 1px 4px rgba(0,0,0,0.08);">
+    <h3 style="font-size:1rem; font-weight:600; margin-bottom:8px;">
+      What does the "Lock Aspect Ratio" option do?
+    </h3>
+    <p style="font-size:0.9rem; color:#444; line-height:1.7; margin:0;">
+      The lock aspect ratio option (🔒) keeps the width and height proportional. 
+      When enabled, if you change the width, the height automatically adjusts 
+      to maintain the original shape of the image. This prevents your image 
+      from looking stretched or squashed. It is recommended to keep this 
+      enabled unless you specifically need a fixed custom size.
+    </p>
+  </div>
+
+  <!-- Q6 -->
+  <div style="background:#fff; border-radius:10px; padding:18px 20px; margin-bottom:12px; box-shadow:0 1px 4px rgba(0,0,0,0.08);">
+    <h3 style="font-size:1rem; font-weight:600; margin-bottom:8px;">
+      Can I resize images on my phone or tablet?
+    </h3>
+    <p style="font-size:0.9rem; color:#444; line-height:1.7; margin:0;">
+      Yes. The TechTools Image Resizer is fully mobile-friendly and works on 
+      all devices including Android phones, iPhones, iPads, and tablets. 
+      You can upload an image directly from your phone's gallery, resize it, 
+      and download the result — all without installing any app.
+    </p>
+  </div>
+
+  <!-- Q7 -->
+  <div style="background:#fff; border-radius:10px; padding:18px 20px; margin-bottom:12px; box-shadow:0 1px 4px rgba(0,0,0,0.08);">
+    <h3 style="font-size:1rem; font-weight:600; margin-bottom:8px;">
+      Is the Image Resizer free to use?
+    </h3>
+    <p style="font-size:0.9rem; color:#444; line-height:1.7; margin:0;">
+      Yes, the TechTools Image Resizer is 100% free with no limits. 
+      You do not need to create an account, sign up, or pay anything. 
+      You can resize as many images as you need without any restrictions.
+    </p>
+  </div>
+
+</section>
+
 </section>
 
 
