--- a/about.html
+++ b/about.html
@@ -91,7 +91,18 @@ data-bs-dismiss="offcanvas"></button>
 Welcome to <strong>TechTools</strong> — your trusted platform for simple, fast, and reliable online tools.
 Our mission is to help users complete everyday digital tasks easily without installing any software.
 </p>
-
+<!-- PERSONAL INTRO - ADD THIS -->
+<div style="background:#eff6ff; border-left:4px solid #3b82f6; border-radius:8px; padding:16px 20px; margin-bottom:24px;">
+  <h5 style="color:#1e3a8a; margin-bottom:8px;">👋 Hi, I'm Prahlad Yadav</h5>
+  <p style="margin:0; color:#374151; line-height:1.7;">
+    I'm a developer from India who built TechTools in 2026 to help YouTube creators, students, 
+    and small businesses access useful digital tools completely for free — without complicated 
+    software or paid subscriptions. I noticed that most online tools were either too slow, 
+    full of ads, or required sign-ups just for basic tasks. TechTools was my answer to that problem.
+    I hope these tools save you time every day!
+  </p>
+</div>
+<!-- END PERSONAL INTRO -->
 <p>
 At TechTools, we focus on creating useful tools for students, professionals, developers, and general users.
 From PDF utilities and image tools to calculators and productivity features, our goal is to make your work easier and faster.
