--- a/test.html
+++ b/test.html
@@ -41,6 +41,10 @@
   --nav-h:   65px;
   --font:    'Inter', sans-serif;
 }
+html, body {
+  width: 100%;
+  overflow-x: hidden;
+}
 *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 html { scroll-behavior: smooth; }
 body { font-family: var(--font); background: var(--bg); color: var(--text); overflow-x: hidden; padding-top: var(--nav-h); }
